// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alphabetized computeToc should alphabetically sort tagged models 1`] = `
Array [
  Object {
    "depth": 0,
    "icon": "chevron-right",
    "id": 11,
    "meta": "v1.0",
    "name": "Another API",
    "type": "divider",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/openapi.v1.yml",
    "icon": "document",
    "id": "11-overview",
    "name": "Overview",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "folder-close",
    "id": "11-things-0",
    "name": "Things",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/openapi.v1.yml/definitions/another-thing",
    "icon": "document",
    "id": 13,
    "name": "Another Thing",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/openapi.v1.yml/paths/~1things/get",
    "icon": "document",
    "id": 12,
    "name": "List Things",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/openapi.v1.yml/definitions/thing",
    "icon": "document",
    "id": 13,
    "name": "Thing",
    "type": "item",
  },
]
`;

exports[`computeToc nested.ts should return the correct icons based on node type 1`] = `
Array [
  Object {
    "depth": 0,
    "icon": undefined,
    "id": "0-0",
    "name": "One Level Deep",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/one-level-deep/file-1.md",
    "icon": "cube",
    "id": "gzv028oc",
    "name": "One level Deep - 1",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/one-level-deep/file-2.md",
    "icon": "cube",
    "id": "gzv028oc",
    "name": "One level Deep - 2",
    "type": "item",
  },
  Object {
    "depth": 1,
    "icon": undefined,
    "id": "2-1",
    "name": "Two Levels Deep",
    "type": "group",
  },
  Object {
    "depth": 2,
    "href": "gh/stoplightio/studio/docs/one-level-deep/two-levels-deep/file-1.md",
    "icon": "cube",
    "id": "gzv028oc",
    "name": "Two levels Deep - 1",
    "type": "item",
  },
  Object {
    "depth": 2,
    "href": "gh/stoplightio/studio/docs/one-level-deep/two-levels-deep/file-2.md",
    "icon": "cube",
    "id": "gzv028oc",
    "name": "Two levels Deep - 2",
    "type": "item",
  },
  Object {
    "depth": 2,
    "icon": undefined,
    "id": "4-2",
    "name": "Three Levels Deep",
    "type": "group",
  },
  Object {
    "depth": 3,
    "icon": undefined,
    "id": "4-3",
    "name": "Four Levels Deep",
    "type": "group",
  },
  Object {
    "depth": 4,
    "href": "gh/stoplightio/studio/docs/one-level-deep/two-levels-deep/three-levels-deep/four-levels-deep/file-1.md",
    "icon": "cube",
    "id": "gzv028oc",
    "name": "Four levels Deep - 1",
    "type": "item",
  },
  Object {
    "depth": 4,
    "href": "gh/stoplightio/studio/docs/one-level-deep/two-levels-deep/three-levels-deep/four-levels-deep/file-2.md",
    "icon": "cube",
    "id": "gzv028oc",
    "name": "Four levels Deep - 2",
    "type": "item",
  },
]
`;

exports[`computeToc nested.ts should return the correct table of contents 1`] = `
Array [
  Object {
    "depth": 0,
    "icon": "folder-close",
    "id": "0-0",
    "name": "One Level Deep",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/one-level-deep/file-1.md",
    "icon": "document",
    "id": "gzv028oc",
    "name": "One level Deep - 1",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/one-level-deep/file-2.md",
    "icon": "document",
    "id": "gzv028oc",
    "name": "One level Deep - 2",
    "type": "item",
  },
  Object {
    "depth": 1,
    "icon": "folder-close",
    "id": "2-1",
    "name": "Two Levels Deep",
    "type": "group",
  },
  Object {
    "depth": 2,
    "href": "gh/stoplightio/studio/docs/one-level-deep/two-levels-deep/file-1.md",
    "icon": "document",
    "id": "gzv028oc",
    "name": "Two levels Deep - 1",
    "type": "item",
  },
  Object {
    "depth": 2,
    "href": "gh/stoplightio/studio/docs/one-level-deep/two-levels-deep/file-2.md",
    "icon": "document",
    "id": "gzv028oc",
    "name": "Two levels Deep - 2",
    "type": "item",
  },
  Object {
    "depth": 2,
    "icon": "folder-close",
    "id": "4-2",
    "name": "Three Levels Deep",
    "type": "group",
  },
  Object {
    "depth": 3,
    "icon": "folder-close",
    "id": "4-3",
    "name": "Four Levels Deep",
    "type": "group",
  },
  Object {
    "depth": 4,
    "href": "gh/stoplightio/studio/docs/one-level-deep/two-levels-deep/three-levels-deep/four-levels-deep/file-1.md",
    "icon": "document",
    "id": "gzv028oc",
    "name": "Four levels Deep - 1",
    "type": "item",
  },
  Object {
    "depth": 4,
    "href": "gh/stoplightio/studio/docs/one-level-deep/two-levels-deep/three-levels-deep/four-levels-deep/file-2.md",
    "icon": "document",
    "id": "gzv028oc",
    "name": "Four levels Deep - 2",
    "type": "item",
  },
]
`;

exports[`computeToc studio.ts should return the correct icons based on node type 1`] = `
Array [
  Object {
    "depth": 0,
    "href": "gh/stoplightio/studio/README.md",
    "icon": "cube",
    "id": "readme",
    "name": "Studio Docs",
    "type": "item",
  },
  Object {
    "depth": 0,
    "href": "gh/stoplightio/studio/docs/ui-overview.md",
    "icon": "cube",
    "id": "gzv028oc",
    "name": "UI Overview",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": undefined,
    "id": "0-0",
    "name": "Designing Apis",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/designing-apis/10-getting-started.md",
    "icon": "cube",
    "id": "ks8cwyvs",
    "name": "Modeling Introduction",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/designing-apis/directory-structure.md",
    "icon": "cube",
    "id": "vxeympcn",
    "name": "Project Structure (Design & Modeling)",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/designing-apis/http-endpoints.md",
    "icon": "cube",
    "id": "bb4i9mek",
    "name": "Working with Models",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/designing-apis/using-references.md",
    "icon": "cube",
    "id": "ovxlx772",
    "name": "Using References",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/designing-apis/validation-style-guide.md",
    "icon": "cube",
    "id": "c2riagde",
    "name": "Validation and Linting",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": undefined,
    "id": "6-0",
    "name": "Workflow",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/workflow/customize-interface.md",
    "icon": "cube",
    "id": "yok9mcyg",
    "name": "Customize Interface Panels",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/workflow/working-with-existing-project.md",
    "icon": "cube",
    "id": "kfc8upgh",
    "name": "Working with an Existing Project",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/workflow/working-with-files.md",
    "icon": "cube",
    "id": "3rxli9io",
    "name": "Working with Files",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/workflow/working-with-git.md",
    "icon": "cube",
    "id": "rb6z0v9w",
    "name": "Working with Git",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": undefined,
    "id": "10-0",
    "name": "Writing Tech Docs",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/writing-tech-docs/10-getting-started.md",
    "icon": "cube",
    "id": "lnciknzw",
    "name": "Documentation Quickstart Guide",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/writing-tech-docs/directory-structure.md",
    "icon": "cube",
    "id": "t6694f4v",
    "name": "Directory Structure (Documentation)",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/writing-tech-docs/linking-between-articles.md",
    "icon": "cube",
    "id": "4znkyjxn",
    "name": "Linking Between Articles",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/writing-tech-docs/publishing.md",
    "icon": "cube",
    "id": "20p2qlve",
    "name": "Publishing in Studio",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/writing-tech-docs/stoplight-flavored-markdown.md",
    "icon": "cube",
    "id": "cu1rik0j",
    "name": "Using Markdown in Documentation",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/writing-tech-docs/using-images.md",
    "icon": "cube",
    "id": "stz6uwdt",
    "name": "Using Images",
    "type": "item",
  },
]
`;

exports[`computeToc studio.ts should return the correct table of contents 1`] = `
Array [
  Object {
    "depth": 0,
    "href": "gh/stoplightio/studio/README.md",
    "icon": "document",
    "id": "readme",
    "name": "Studio Docs",
    "type": "item",
  },
  Object {
    "depth": 0,
    "href": "gh/stoplightio/studio/docs/ui-overview.md",
    "icon": "document",
    "id": "gzv028oc",
    "name": "UI Overview",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "folder-close",
    "id": "0-0",
    "name": "Designing Apis",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/designing-apis/10-getting-started.md",
    "icon": "document",
    "id": "ks8cwyvs",
    "name": "Modeling Introduction",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/designing-apis/directory-structure.md",
    "icon": "document",
    "id": "vxeympcn",
    "name": "Project Structure (Design & Modeling)",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/designing-apis/http-endpoints.md",
    "icon": "document",
    "id": "bb4i9mek",
    "name": "Working with Models",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/designing-apis/using-references.md",
    "icon": "document",
    "id": "ovxlx772",
    "name": "Using References",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/designing-apis/validation-style-guide.md",
    "icon": "document",
    "id": "c2riagde",
    "name": "Validation and Linting",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "folder-close",
    "id": "6-0",
    "name": "Workflow",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/workflow/customize-interface.md",
    "icon": "document",
    "id": "yok9mcyg",
    "name": "Customize Interface Panels",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/workflow/working-with-existing-project.md",
    "icon": "document",
    "id": "kfc8upgh",
    "name": "Working with an Existing Project",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/workflow/working-with-files.md",
    "icon": "document",
    "id": "3rxli9io",
    "name": "Working with Files",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/workflow/working-with-git.md",
    "icon": "document",
    "id": "rb6z0v9w",
    "name": "Working with Git",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "folder-close",
    "id": "10-0",
    "name": "Writing Tech Docs",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/writing-tech-docs/10-getting-started.md",
    "icon": "document",
    "id": "lnciknzw",
    "name": "Documentation Quickstart Guide",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/writing-tech-docs/directory-structure.md",
    "icon": "document",
    "id": "t6694f4v",
    "name": "Directory Structure (Documentation)",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/writing-tech-docs/linking-between-articles.md",
    "icon": "document",
    "id": "4znkyjxn",
    "name": "Linking Between Articles",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/writing-tech-docs/publishing.md",
    "icon": "document",
    "id": "20p2qlve",
    "name": "Publishing in Studio",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/writing-tech-docs/stoplight-flavored-markdown.md",
    "icon": "document",
    "id": "cu1rik0j",
    "name": "Using Markdown in Documentation",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "gh/stoplightio/studio/docs/writing-tech-docs/using-images.md",
    "icon": "document",
    "id": "stz6uwdt",
    "name": "Using Images",
    "type": "item",
  },
]
`;

exports[`computeToc studio-template.ts should return the correct icons based on node type 1`] = `
Array [
  Object {
    "depth": 0,
    "href": "sl/org/project/docs/getting-started.md",
    "icon": "cube",
    "id": 1,
    "name": "Getting Started",
    "type": "item",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/docs/welcome.md",
    "icon": "cube",
    "id": 0,
    "name": "Welcome",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": undefined,
    "id": "1-0",
    "name": "Guides",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/docs/guides/authentication.md",
    "icon": "cube",
    "id": 2,
    "name": "Authentication",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": undefined,
    "id": "2-0",
    "name": "Tutorials",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/docs/tutorials/billing.md",
    "icon": "cube",
    "id": 4,
    "name": "Billing",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/docs/tutorials/signup.md",
    "icon": "cube",
    "id": 3,
    "name": "Signup",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "badge",
    "id": 11,
    "meta": "v1.0",
    "name": "Another API",
    "type": "divider",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/openapi.v1.yml",
    "icon": undefined,
    "id": "11-overview",
    "name": "Overview",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": undefined,
    "id": "11-things-0",
    "name": "Things",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/openapi.v1.yml/paths/~1things/get",
    "icon": "download",
    "id": 12,
    "name": "List Things",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/openapi.v1.yml/definitions/thing",
    "icon": "box",
    "id": 13,
    "name": "Thing",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "badge",
    "id": 5,
    "name": "Todos API",
    "type": "divider",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/reference/todos/openapi.v1.yml",
    "icon": undefined,
    "id": "5-overview",
    "name": "Overview",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": undefined,
    "id": "5-users-0",
    "name": "Users",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/reference/todos/openapi.v1.yml/paths/~1users/get",
    "icon": "download",
    "id": 6,
    "name": "Get User",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": undefined,
    "id": "5-other",
    "name": "Other",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/reference/todos/openapi.v1.yml/paths/~1todos/get",
    "icon": "download",
    "id": 8,
    "name": "Get Todo",
    "type": "item",
  },
  Object {
    "depth": 0,
    "id": "models",
    "name": "Models",
    "type": "divider",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/models/example",
    "icon": "box",
    "id": 10,
    "meta": "v1.0",
    "name": "Example",
    "type": "item",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/reference/todos/models/todos",
    "icon": "box",
    "id": 9,
    "name": "Todo",
    "type": "item",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/reference/todos/models/user",
    "icon": "box",
    "id": 7,
    "meta": "v1.0",
    "name": "User",
    "type": "item",
  },
]
`;

exports[`computeToc studio-template.ts should return the correct table of contents 1`] = `
Array [
  Object {
    "depth": 0,
    "href": "sl/org/project/docs/getting-started.md",
    "icon": "document",
    "id": 1,
    "name": "Getting Started",
    "type": "item",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/docs/welcome.md",
    "icon": "document",
    "id": 0,
    "name": "Welcome",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "folder-close",
    "id": "1-0",
    "name": "Guides",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/docs/guides/authentication.md",
    "icon": "document",
    "id": 2,
    "name": "Authentication",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "folder-close",
    "id": "2-0",
    "name": "Tutorials",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/docs/tutorials/billing.md",
    "icon": "document",
    "id": 4,
    "name": "Billing",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/docs/tutorials/signup.md",
    "icon": "document",
    "id": 3,
    "name": "Signup",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "chevron-right",
    "id": 11,
    "meta": "v1.0",
    "name": "Another API",
    "type": "divider",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/openapi.v1.yml",
    "icon": "document",
    "id": "11-overview",
    "name": "Overview",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "folder-close",
    "id": "11-things-0",
    "name": "Things",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/openapi.v1.yml/paths/~1things/get",
    "icon": "document",
    "id": 12,
    "name": "List Things",
    "type": "item",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/openapi.v1.yml/definitions/thing",
    "icon": "document",
    "id": 13,
    "name": "Thing",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "chevron-right",
    "id": 5,
    "name": "Todos API",
    "type": "divider",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/reference/todos/openapi.v1.yml",
    "icon": "document",
    "id": "5-overview",
    "name": "Overview",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "folder-close",
    "id": "5-users-0",
    "name": "Users",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/reference/todos/openapi.v1.yml/paths/~1users/get",
    "icon": "document",
    "id": 6,
    "name": "Get User",
    "type": "item",
  },
  Object {
    "depth": 0,
    "icon": "folder-close",
    "id": "5-other",
    "name": "Other",
    "type": "group",
  },
  Object {
    "depth": 1,
    "href": "sl/org/project/reference/todos/openapi.v1.yml/paths/~1todos/get",
    "icon": "document",
    "id": 8,
    "name": "Get Todo",
    "type": "item",
  },
  Object {
    "depth": 0,
    "id": "models",
    "name": "Models",
    "type": "divider",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/models/example",
    "icon": "document",
    "id": 10,
    "meta": "v1.0",
    "name": "Example",
    "type": "item",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/reference/todos/models/todos",
    "icon": "document",
    "id": 9,
    "name": "Todo",
    "type": "item",
  },
  Object {
    "depth": 0,
    "href": "sl/org/project/reference/todos/models/user",
    "icon": "document",
    "id": 7,
    "meta": "v1.0",
    "name": "User",
    "type": "item",
  },
]
`;
